--- a/grafana/prometheus/prometheus.yml
+++ b/grafana/prometheus/prometheus.yml
@@ -1,3 +1,20 @@
+global:
+  scrape_interval: 20s
+
+  # A short evaluation_interval will check alerting rules very often.
+  # It can be costly if you run Prometheus with 100+ alerts.
+  evaluation_interval: 20s
+  ...
+
+rule_files:
+  - 'alerts/*.yml'
+
+alerting:
+  alertmanagers:
+   - static_configs:
+     - targets:
+        - localhost:9093
+
 scrape_configs:
   - job_name: nodes
     scrape_interval: 10s
