one more small fix for alert-manager

--- a/alert-manager/docker-compose.yml
+++ b/alert-manager/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3'
 services:
   alert-manager:
       image: prom/alertmanager
-      volumes:
+      #volumes:
       #  - "./alertmanager.yml:/alertmanager/alertmanager.yml"
       # networks:
       #   - localprom
