--- a/grafana/prometheus/prometheus.yml
+++ b/grafana/prometheus/prometheus.yml
@@ -9,11 +9,11 @@ global:
 rule_files:
   - 'alerts/*.yml'
 
-alerting:
-  alertmanagers:
-   - static_configs:
-     - targets:
-        - localhost:9093
+# alerting:
+#   alertmanagers:
+#    - static_configs:
+#      - targets:
+#         - localhost:9093
 
 scrape_configs:
   - job_name: nodes
