enable rule files

--- a/grafana/prometheus/prometheus.yml
+++ b/grafana/prometheus/prometheus.yml
@@ -5,8 +5,8 @@ global:
   # It can be costly if you run Prometheus with 100+ alerts.
   evaluation_interval: 20s
 
-# rule_files:
-#   - 'alerts/*.yml'
+rule_files:
+  - 'alerts/*.yml'
 
 alerting:
   alertmanagers:
