--- a/grafana/prometheus/alerts/scrapers.yml
+++ b/grafana/prometheus/alerts/scrapers.yml
@@ -5,7 +5,7 @@ groups:
   rules:
 
     - alert: items<1000
-      expr: '(items{service="feedbacks_scrapper"}[6h]) = my_metric != bool 0'
+      expr: 'last_over_time(items{service="feedbacks_scrapper"}[10m]) = my_metric != bool 0'
       for: 1h
       labels:
         severity: warning
