--- a/alert-manager/docker-compose.yml
+++ b/alert-manager/docker-compose.yml
@@ -3,8 +3,8 @@ version: '3'
 services:
   alert-manager:
       image: prom/alertmanager
-      #volumes:
-      #  - "./alertmanager.yml:/alertmanager/alertmanager.yml"
+      volumes:
+       - "./alertmanager.yml:/alertmanager/alertmanager.yml"
       # networks:
       #   - localprom
       ports:
